[gd_scene load_steps=16 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://Framboise.tscn" type="PackedScene" id=2]
[ext_resource path="res://Boss_Lapin.tscn" type="PackedScene" id=3]
[ext_resource path="res://tuto_fleches.tscn" type="PackedScene" id=4]
[ext_resource path="res://roulade.tscn" type="PackedScene" id=5]
[ext_resource path="res://exclamation.tscn" type="PackedScene" id=6]
[ext_resource path="res://objets/Photo.tscn" type="PackedScene" id=7]
[ext_resource path="res://CroissantShooter.tscn" type="PackedScene" id=8]
[ext_resource path="res://images/non_gameplay/savane_fond.png" type="Texture" id=9]
[ext_resource path="res://images/non_gameplay/savane_fond1.png" type="Texture" id=10]
[ext_resource path="res://images/non_gameplay/savane_fond2.png" type="Texture" id=11]
[ext_resource path="res://Caterpillar.tscn" type="PackedScene" id=12]
[ext_resource path="res://ObjetsTable.tscn" type="PackedScene" id=13]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=14]
[ext_resource path="res://Camera.gd" type="Script" id=15]

[node name="General" type="Node" groups=[
"chef",
]]
script = ExtResource( 1 )
Framboise = ExtResource( 2 )
Boss_Lapin = ExtResource( 3 )
Tuto_fleches = ExtResource( 4 )
Tuto_Roulade = ExtResource( 5 )
Exclamation = ExtResource( 6 )
Photo = ExtResource( 7 )
Shooter = ExtResource( 8 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -1

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 0.8 )

[node name="BackGround" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( -0.135559, 197.611 )
scale = Vector2( 1, 1.14503 )
texture = ExtResource( 9 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.3, 0.9 )

[node name="BackGround2" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 259.716, -144.707 )
scale = Vector2( 1.362, 1.362 )
texture = ExtResource( 10 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.6, 1 )

[node name="BackGround3" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2( 770.043, -68.8616 )
scale = Vector2( 1.2683, 1.2683 )
texture = ExtResource( 11 )

[node name="Caterpillar3" parent="." instance=ExtResource( 12 )]
scale = Vector2( 0.8, 0.8 )

[node name="ObjetsTable" parent="." groups=[
"SortY",
] instance=ExtResource( 13 )]

[node name="Caterpillar" parent="." instance=ExtResource( 12 )]
position = Vector2( 1.26048, -1.26049 )
speed = 290

[node name="Caterpillar2" parent="." instance=ExtResource( 12 )]
position = Vector2( 1.87643, -0.658852 )
speed = 330

[node name="HUD" parent="." instance=ExtResource( 14 )]

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -17.0

[node name="Camera" type="Node2D" parent="."]
position = Vector2( 940.984, 441.793 )
script = ExtResource( 15 )
center = Vector2( 940, 300 )

[node name="Camera2D" type="Camera2D" parent="Camera"]
position = Vector2( -19.531, -0.630245 )
current = true
limit_left = 0
limit_top = -700
limit_right = 1920
limit_bottom = 1000
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_speed = 10.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="Polygon2D" type="Polygon2D" parent="Camera"]
visible = false
position = Vector2( -0.296198, 0.980602 )
scale = Vector2( 0.370458, 0.355089 )
color = Color( 1, 0, 0, 1 )
polygon = PoolVector2Array( -36.5469, -33.8118, 10.2823, -40.5017, 49.5855, -11.2334, 41.6412, 22.6342, -10.6236, 38.1046, -49.0905, 5.49134 )

[node name="VoicePlayer" type="AudioStreamPlayer" parent="."]
volume_db = 24.0
